Recent Posts: Prevent Vertical Misalignment With Non-image List Style

--- a/widgets/recent-posts/styles/default.less
+++ b/widgets/recent-posts/styles/default.less
@@ -113,7 +113,7 @@
 			&-inner {
 				align-items: center;
 				column-gap: @featured_image_gutter;
-				display: grid;
+				display: inline-grid;
 				grid-template-columns: auto 12fr;
 				margin-left: calc(25px + @list_style_indent);
 			}
